--- a/ImageMagick/ImageMagick.vcxproj
+++ b/ImageMagick/ImageMagick.vcxproj
@@ -173,6 +173,7 @@
       <CallingConvention>Cdecl</CallingConvention>
       <Optimization>Disabled</Optimization>
       <OmitFramePointers>false</OmitFramePointers>
+      <DisableSpecificWarnings>4267;4244;4251;4275;4068</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <OutputFile>$(TargetPath)</OutputFile>
